--- a/src/pages/VistaGestionarUsuario/VistaGestionarUsuario.css
+++ b/src/pages/VistaGestionarUsuario/VistaGestionarUsuario.css
@@ -6,6 +6,10 @@
 }
 
 #contenedor-opciones{
+    display: flex;
     width: 100%;
     margin-left: 10px;
+    flex-direction: row;
+    gap: 40px;
+    justify-content: center;
 }
