--- a/src/components/ModalFormulario/ModalFormulario.css
+++ b/src/components/ModalFormulario/ModalFormulario.css
@@ -4,7 +4,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     width: 50%;
-    height: 40%;
+    height: 50%;
     background-color: white;
     border: 2px solid #000;
     box-shadow: 0px 24px 38px rgba(0, 0, 0, 0.14), 0px 9px 46px rgba(0, 0, 0, 0.12), 0px 11px 15px rgba(0, 0, 0, 0.2);
@@ -16,4 +16,11 @@
     font-size: 1rem;
     width: 100%;
     text-align: center;
+}
+
+#modal-dinamico-title{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  font-weight: bold;
 }
