--- a/src/components/FormularioModificarUsuario/FormularioModificarUsuario.css
+++ b/src/components/FormularioModificarUsuario/FormularioModificarUsuario.css
@@ -1,6 +1,14 @@
+/* Reset general */
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 #contenedor-formulario {
     width: 100%;
     height: 100%;
+    flex-direction: column;
 
 }
 
@@ -14,12 +22,10 @@ form{
 
 #contenedor-superior{
     width: 100%;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto auto auto;
-    gap: 15px;
+    height: 50%;
+    display: flex;
+    text-align: center;
 }
-
 
 #contenedor-boton{
     width: 100%;
@@ -28,3 +34,4 @@ form{
     justify-content: center;
     gap: 10px;
 }
+
