--- a/src/components/FormularioRegistrarProyecto/FormularioRegistrarProyecto.css
+++ b/src/components/FormularioRegistrarProyecto/FormularioRegistrarProyecto.css
@@ -1,6 +1,8 @@
 #contenedor-formulario {
     width: 100%;
     height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 form {
@@ -13,10 +15,8 @@ form {
 
 #contenedor-superior {
     width: 100%;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto auto auto;
-    gap: 15px;
+    display: flex;
+    flex-direction: column;
 }
 
 #contenedor-boton {
@@ -58,7 +58,6 @@ form {
     flex-direction: column; /* Esto pone los inputs uno debajo del otro */
     gap: 10px;
     width: 100%;
-    background-color: whitesmoke; /* Puedes quitar esto si era solo para debug */
     align-items: stretch; /* Asegura que los inputs ocupen todo el ancho */
 }
 
@@ -66,7 +65,6 @@ form {
     width: 100%;
     padding: 8px;
     border-radius: 4px;
-    border: 1px solid #ccc;
     font-size: 1rem;
     font-family: inherit;
     box-sizing: border-box;
