--- a/src/components/BotonVerMas/BotonVerMas.css
+++ b/src/components/BotonVerMas/BotonVerMas.css
@@ -2,5 +2,5 @@
   display: flex !important;
   align-items: center !important;
   justify-content: center !important;
-  text-align: center;
+  background-color: blue !important;
 }
