--- a/src/components/FormularioRegistrarProyecto/FormularioRegistrarProyecto.css
+++ b/src/components/FormularioRegistrarProyecto/FormularioRegistrarProyecto.css
@@ -19,7 +19,7 @@ form {
     flex-direction: column;
 }
 
-#contenedor-boton {
+#contenedor-boton-formulario-proyecto {
     width: 100%;
     display: flex;
     align-items: center;
@@ -44,7 +44,7 @@ form {
 }
 
 /* Contenedor general de campos extras */
-#campos-extras {
+.campos-extras {
     display: flex;
     flex-direction: column;
     gap: 10px;
