--- a/src/pages/VistaGestionarProyecto/VistaGestionarProyecto.css
+++ b/src/pages/VistaGestionarProyecto/VistaGestionarProyecto.css
@@ -14,16 +14,40 @@ body,
     width: 100%;
     height: 100%;
     display: flex;
-    flex-direction: column; /* Para que se acomoden en vertical */
-    gap: 10px;
-}
-
-#contenedor-opciones{
-    display: flex;
-    width: 100%;
+    flex-direction: column;
+    overflow: hidden;
     justify-content: center;
-    margin-left: 10px;
-    flex-direction: row;
-    gap: 40px;
+    align-items: center;
 }
 
+#contenedor-filtro-proyecto {
+    display: flex;
+    width: 99%;
+    height: 5%;
+    justify-content: center;
+    gap: 50px;
+    margin-top: 10px;
+    
+}
+
+#contenedor-tabla-proyecto {
+    margin-top: 20px;
+    width: 100%;
+    flex: 1;
+    min-height: 0;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* <-- Centro horizontalmente */
+}
+
+
+.MuiTableContainer-root {
+    flex: 1;
+    overflow: auto;
+    background-color: inherit;
+}
+
+.MuiTable-root {
+    min-width: 650px;
+}
