--- a/src/pages/VistaGestionarProyectoEstudiante/VistaGestionarProyectoEstudiante.css
+++ b/src/pages/VistaGestionarProyectoEstudiante/VistaGestionarProyectoEstudiante.css
@@ -10,7 +10,7 @@ body,
     height: 100%;
 }
 
-#contenedor-gestionar-usuario {
+#gestionar-proyecto-estudiante {
     width: 100%;
     height: 100%;
     display: flex;
@@ -20,17 +20,28 @@ body,
     align-items: center;
 }
 
-#contenedor-filtro-usuario {
+#contenedor-filtro-estudiante{
+    margin-top: 10px;
+    width: 90%;
+    height: 5%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin-bottom: 10px;
+}
+
+#contenedor-titulo-estudiante {
     display: flex;
     width: 99%;
-    height: 5%;
+    height: 10%;
     justify-content: center;
     gap: 50px;
     margin-top: 10px;
-    
+
 }
 
-#contenedor-tabla-usuario {
+#contenedor-tabla-proyecto-estudiante {
     margin-top: 20px;
     width: 100%;
     flex: 1;
@@ -38,7 +49,8 @@ body,
     overflow: hidden;
     display: flex;
     flex-direction: column;
-    align-items: center; /* <-- Centro horizontalmente */
+    align-items: center;
+    /* <-- Centro horizontalmente */
 }
 
 
