--- a/src/pages/VistaProyectoSeleccionado/VistaProyectoSeleccionado.css
+++ b/src/pages/VistaProyectoSeleccionado/VistaProyectoSeleccionado.css
@@ -4,17 +4,18 @@
     box-sizing: border-box;
 }
 
-#contenedor-principal {
-    width: 100%;
-    height: 100%;
+#contenedor-principal-proyecto-docente {
+    width: 100vw;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     gap: 10px;
+    align-items: center;
 }
 
-#contenedor-titulo {
+#contenedor-titulo-proyecto {
     margin-top: 5px;
-    width: 100%;
+    width: 80%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -23,32 +24,9 @@
     border-bottom: solid gray 1px;
 }
 
-.contenedor-informacion {
+.contenedor-informacion{
     display: flex;
+    width: 80%;
     flex-direction: column;
     gap: 10px;
-    margin-top: 10px;
-}
-
-.subtitulo {
-    margin-left: 20px;
-    font-size: 15px;
-    font-weight: bold;
-    font-family: Arial, sans-serif;
-}
-
-.contenedor {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-
-}
-
-ul {
-    list-style-type: square;
-    padding-left: 20px;
-    font-size: 15px;
-    font-weight: bold;
-    font-family: Arial, sans-serif;
-    margin-left: 15px;
 }
